# HeimaCpp

./: .clang-format  .gitignore  README.md
01、C++基础语法/1、C++初识/: 02_注释.cpp  03_变量.cpp  05_关键字.cpp  06_标识符的命名规则.cpp
01、C++基础语法/2、数据类型/: 02_sizeof关键字.cpp  03_实型.cpp  04_字符型.cpp  06_字符串型.cpp  07_布尔类型.cpp  08_数据的输入.cpp
01、C++基础语法/讲义/: 1、C++初识.md  2、数据类型.md
02、实战-通讯录管理/: 通讯录管理.md
02、实战-通讯录管理/代码/: main.cpp
03、C++核心编程/1、内存分区模型/: 01_全局区.cpp  02_栈区.cpp  03_堆区.cpp  04_new操作符.cpp
03、C++核心编程/2、引用/: 04_引用做函数返回值.cpp  06_常量引用.cpp
03、C++核心编程/3、函数提高/: 04_函数重载注意事项.cpp
03、C++核心编程/4、类和对象/: 01_封装的意义.cpp  02_封装案例.cpp  04_struct和class区别.cpp  05_成员属性设置为私有.cpp  09_构造函数的分类及调用.cpp  11_构造函数调用规则.cpp  14_类对象作为类成员.cpp  16、成员变量和成员函数分开存储.cpp  16、静态成员函数.cpp  17、this指针概念.cpp  20、全局函数做友元.cpp  22、成员函数做友元.cpp  24、左移运算符重载.cpp  26、赋值运算符重载.cpp  28、函数调用运算符重载.cpp  30、继承方式.cpp  31、继承中的对象模型.cpp  34、继承同名静态成员处理方式.cpp  38、多态案例一-计算器类.cpp  40、多态案例二-制作饮品.cpp  42、多态案例三-电脑组装.cpp  circle.cpp  circle.h
03、C++核心编程/5、文件操作/: 3_二进制写文件.cpp
03、C++核心编程/讲义/: 1、内存分区模型.md  2、引用.md  3、函数提高.md  4、类和对象.md  5、文件操作.md
04、实战-基于多态的企业职工系统/代码/: Boss.h  CMakeLists.txt  Employee.h  Manager.h  Worker.h  WorkerManager.h  empFile.txt  main.cpp
04、实战-基于多态的企业职工系统/代码/include/: Boss.h  Employee.h  Manager.h  Worker.h  WorkerManager.h
04、实战-基于多态的企业职工系统/代码/src/: Boss.cpp  Employee.cpp  Manager.cpp  WorkerManager.cpp
05、C++提高编程/1、模板/: 01_函数模板.cpp  06_模板的局限性.cpp  11_类模板与继承.cpp  13_类模板分文件编写.cpp
05、C++提高编程/4、STL函数对象/: 2、一元谓词.cpp  4、算术仿函数.cpp  5、关系仿函数.cpp
05、C++提高编程/5、STL常用算法/: 10、random_shuffle.cpp  11、merge.cpp  14、replace.cpp  (+4 more)
(+140 files in other folders)
